# iCub_Code

./: README.md
ERA/: CMakeLists.txt  ERA.xml  README.md  cmake_install.cmake
ERA/src/: Era.cpp  Era.h  Node.cpp  Node.hpp  main.cpp  som.cpp  som.hpp
Hold-outs/: Hogs.cpp  Hogs.hpp  README.md  main.cpp
